# cosmocnc

./: .gitignore  README.md  cat.py  cnc.py  cnc_cobaya_theory.py  cosmo.py  hmf.py  n_q.txt  n_z.txt  params.py  ps.py  pyproject.toml  setup.py  sr.py  test.py  utils.py
cnc/: __init__.py  cat.py  cnc.py  cnc_cobaya_likelihood.py  cnc_cobaya_theory.py  cnc_new.py  cnc_old.py  cnc_plot_old.py  config.py  cosmo.py  fisher.py  hmf.py  params.py  ps.py  sim.py  sim_old.py  sr.py  utils.py
cosmocnc/: __init__.py  cat.py  cnc.py  cnc_cobaya_bias_likelihood.py  cnc_cobaya_bias_theory.py  cnc_cobaya_likelihood.py  cnc_cobaya_theory.py  config.py  cosmo.py  cosmocnc_cobaya.py  hmf.py  params.py  ps.py  restore_nn.py  sbi.py  sim.py  sr.py  utils.py
cosmocnc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cosmocnc/data/: cluster_patch_index.npy  mass_estimates_paper.npy  noise_planck.txt  sigma_theta_lens_vec.npy  (+2 more)
data/: skyfracs_planck.txt  test_downsample_tiles_noisebased_mmf3.npy  thetas_planck_arcmin.txt
surveys/: survey_cat_so_sim.py  survey_sr_so_sim.py
test_files/: hmf.txt  n_q_new.txt  n_z.txt  n_z_16sept23.txt  n_z_new.txt  test.py  test_1d_spt.ipynb  test_2d.py  test_dndzdq.py  test_inigo.py  test_interp.py  test_module.py  trash.py
tests/: cobaya_test.yaml  test_baseline.py
tutorials/: ACT_bias.ipynb  ACT_bias_generate_DES_files.ipynb  act_dr6.ipynb  check_chains.ipynb  check_scaling_relation.ipynb  cosmocnc_alone.py  cosmocnc_so_benchmark_class_sz.ipynb  cosmocnc_tutorial.ipynb  main_benchmark_oct24.ipynb  test_cosmocnc_class_sz_hmf_cluster_counts.py
(+91 files in other folders)
