[project]
name = "cosmocnc"
version = "1.0"
description = "Python package for fast cluster number count likelihood computation"
authors = [
    { name = "Inigo Zubeldia", email = "inigo.zubeldia@ast.cam.ac.uk" },
    { name = "Boris Bolliet" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "mcfit",
    "multiprocess",
]

[project.optional-dependencies]
cobaya = [
    "cobaya (>=3.5)",
]
emulator = [
    "tensorflow",
]

[project.urls]
Homepage = "https://github.com/inigozubeldia/cosmocnc"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cosmocnc"]

[tool.setuptools.package-data]
cosmocnc = ["data/**/*", "surveys/**/*"]
